--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,35 +147,58 @@ h6 {
   font-family: var(--font-secondary), monospace;
 }
 
-.slider {
-  overflow: hidden;
-  background-color: var(--color-secondary);
-  width: 100%;
-  position: relative;
-  margin: 5px 0;
-}
-
-.slider-track {
+#skills-slider {
   display: flex;
-  width: 200%;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
 }
 
-.slider-track .slide {
-  flex: 0 0 calc(50%/3);
+.card
+{
+  width: 240px;
+  height: 300px;
+
+  background: url("../images/SVGs/CartIcon.svg") center center no-repeat;
+  transition: transform 0.2s ease-in-out, scale 0.2s ease-in;
 }
 
-.slider,
-.slide,
-.slide * {
-  max-height: 200px;
+.card .title
+{
+  margin-top: 30px;
 }
 
-.slider-track.odd {
-  animation: scroll linear 20s infinite;
+.card .experience
+{
+  padding: 20px;
+  word-break: break-word;
 }
 
-.slider-track.even {
-  animation: scroll linear 20s infinite reverse;
+.card img
+{
+  height: 30%;
+  object-fit: contain;
+}
+
+.left-button
+{
+  position: absolute;
+  left: 10px;
+}
+
+.right-button
+{
+  position: absolute;
+  right: 10px;
+}
+
+.cards-wrapper {
+  position: relative;
+
+  left: calc(240px * 6);
+
+  display: flex;
 }
 
 .contact-link {
@@ -233,17 +256,17 @@ a:has(.contact-link) {
   }
   header {
     flex-direction: column;
-    gap: 1rem;
     padding-bottom: 3%;
   }
+
+  header *
+  {
+    margin: 5px;
+  }
+
   footer address {
     flex-direction: column;
     gap: 1rem;
-  }
-  .slider,
-  .slide,
-  .slide * {
-    max-height: 150px;
   }
   p {
     font-size: 0.9em;
@@ -254,11 +277,6 @@ a:has(.contact-link) {
   main {
     font-size: 0.85em;
     padding: 0 10px;
-  }
-  .slider {
-    margin-left: -10px;
-    margin-right: -10px;
-    width: calc(100% + 20px);
   }
   h1 {
     font-size: 2em;
