Disable left button by default and add disabled button styles
The left navigation button is now initially disabled with an HTML attribute. Added styles for disabled `.manage-button` to visually indicate its inactive state using a grayscale filter. This improves the user experience by signaling unavailability of the button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,15 +181,29 @@ h6 {
   object-fit: contain;
 }
 
-.left-button
+.manage-button
 {
   position: absolute;
+
+  background: var(--color-secondary);
+  border: none;
+  padding: 5px;
+
+  color: var(--font-color-primary);
+}
+
+.manage-button:disabled
+{
+  filter: grayscale(100%);
+}
+
+.left-button
+{
   left: 10px;
 }
 
 .right-button
 {
-  position: absolute;
   right: 10px;
 }
 
