--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,6 @@ main {
   color: var(--font-color-primary);
   font-family: var(--font-primary), monospace;
   flex: 1;
-  min-height: 100svh;
   box-sizing: border-box;
   justify-content: flex-start;
   text-align: center;
@@ -189,11 +188,12 @@ h6 {
 
 #skills-slider {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
   width: 100%;
-  height: 350px;
+  height: 380px;
 }
 
 .card
@@ -264,7 +264,7 @@ h6 {
   background: var(--font-color-secondary);
 }
 
-.manage-button:active {
+.manage-button:active, .dot:active{
   transform: scale(0.9);
 }
 
@@ -282,9 +282,42 @@ h6 {
   right: 10px;
 }
 
+.dots-wrapper {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+
+  user-select: none;
+  gap: 1rem;
+}
+
+.dot
+{
+  font-weight: bold;
+  font-size: 2em;
+
+  transition: font-size 0.2s ease-in, color 0.2s ease;
+  user-select: none;
+
+  width: auto;
+  height: auto;
+}
+
+.dot:active
+{
+  font-size: 1.5em;
+}
+
+.dot.active
+{
+  color: var(--accent-color);
+}
 
 .cards-wrapper {
-
   position: relative;
   transform: translateX(calc(240px * 6));
   display: flex;
@@ -354,18 +387,23 @@ a:has(.contact-link) {
   }
 
   footer address {
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 1rem;
   }
+
   p {
     font-size: 0.9em;
+  }
+
+  .dot
+  {
+    font-size: 3em;
   }
 }
 
 @media (max-width: 480px) {
   main {
     font-size: 0.85em;
-    padding: 0 10px;
   }
   h1 {
     font-size: 2em;
@@ -377,5 +415,10 @@ a:has(.contact-link) {
   .contact-link p {
     margin: 3px;
     font-size: 0.8em;
+  }
+
+  .dot
+  {
+    font-size: 2.7em;
   }
 }
