--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body * {
   transition: background-color 0.3s ease;
 }
 
-.card img.dark
+.card picture.dark
 {
   transition: filter 0.3s ease;
 }
@@ -186,7 +186,7 @@ h6 {
   font-family: var(--font-secondary), monospace;
 }
 
-#skills-slider {
+.skills-slider{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -226,7 +226,7 @@ h6 {
   margin-top: 30px;
 }
 
-.card .experience
+.card .experience, .card .description
 {
   padding: 20px;
   word-break: break-word;
@@ -317,9 +317,19 @@ h6 {
   color: var(--accent-color);
 }
 
-.cards-wrapper {
+.cards-wrapper
+{
+  display: flex;
   position: relative;
+}
+
+#skills-showcase .cards-wrapper{
   transform: translateX(calc(240px * 6));
+}
+
+.projects-wrapper
+{
+  position: relative;
   display: flex;
 }
 
